@@ -29,10 +29,13 @@
 #include "libs/input/sdl/input.h"
 #include "libs/threadlib.h"
 
+// constants for TFB_InitGraphics
+
 extern SDL_Surface *SDL_Video;
 extern SDL_Surface *SDL_Screen;
-extern SDL_Surface *ExtraScreen;
 extern SDL_Surface *TransitionScreen;
+
+extern SDL_Surface *SDL_Screens[TFB_GFX_NUMSCREENS];
 
 extern volatile int TransitionAmount;
 extern SDL_Rect TransitionClipRect;
